# intern-bot

./: .gitignore  .replit  README.md  main.py  pyproject.toml  replit.nix
clash/: code-editors.txt  languages.txt
db/: __init__.py  sandbox.py  utility.py
db/handle/: __init__.py  models.py
db/models/: __init__.py  clashes.py  dumpster.py  tickets.py
source/: __init__.py
source/cogs/: cog.py
source/cogs/clashes/: __init__.py  cog.py  perms.json  views.py
source/cogs/clashes/config/: perms.json
source/cogs/dump/: __init__.py  cog.py  perms.json
source/cogs/dump/config/: help.json  perms.json
source/cogs/help/: __init__.py  cog.py
source/cogs/help/config/: perms.json
source/cogs/sandbox/: __init__.py  cog.py
source/cogs/starboard/: __init__.py  cog.py  perms.json
source/cogs/tickets/: __init__.py  cog.py  listen.py  utility.py  views.py
source/cogs/tickets/config/: help.json  perms.json
source/cogs/tickets/data/: board.txt  thread.txt
source/cogs/tickets/views/: misc.py  ticket.py
source/cogs/utility/: __init__.py  cog.py  logs.py  perms.json
source/events/on_connect/: __init__.py  event.py
source/events/on_ready/: __init__.py  event.py
source/server/: __init__.py
