[tool.poetry]
name = "intern"
version = "0.1.0"
description = ""
authors = ["frissyn <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.5"
timeago = "^1.0.15"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
